# hcmo-kgqa-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sync-hcmo.yml
app/: __init__.py  streamlit_app.py
app/core/: __init__.py  config.py  logging.py  models.py
app/evaluation/: __init__.py  expected_terms.yaml  metrics.py  test_questions.yaml
app/guardrails/: __init__.py  grounding_checker.py  injection_filter.py  sparql_policy.py  (+1 more)
docs/: architecture.md  demo_script.md  generated_sparql_plan.md  hcmo_sync.md  kgqa_pipeline.md  ontology_update_workflow.md  recommended_hcmo_repo_layout.md  shacl_validation.md  sparql_guardrails.md
kg/: README.md
ontology/: README.md
scripts/: _common.py  build_ontology_profile.py  demo_screenshots.js  demo_serve.py  load_to_fuseki.py  materialize_reasoning.py  merge_rdf_graphs.py  reset_demo.py  run_test_questions.py  sync_hcmo.py  validate_shacl.py
shacl/: README.md  animal_cohort_shape.ttl  behavioral_metric_shape.ttl  hcm_dataset_shape.ttl  hcm_experiment_shape.ttl  hcm_system_shape.ttl  vcg_readiness_shape.ttl
sparql/: README.md  competency_questions.yaml
sync/: HCMO_SYNC.lock.json  hcmo_sources.yaml
tests/: conftest.py  test_evaluation.py  test_generated_repair.py  test_generated_sparql.py  test_grounded_answers.py  test_hcmo_sync.py  test_kg_reasoner.py  test_kgqa_orchestrator.py  test_ontology_profile.py  test_shacl_validation.py  test_slot_binding.py  test_sparql_policy.py  test_template_queries.py  test_term_validator.py
(+56 files in other folders)
